@@ -1,3 +1,9 @@
+2011-02-06 Borut Razem <borut.razem AT gmail.com>
+
+	* packages/build.ncurses/Makefile: tab indentation
+	  packages/build.boost, packages/build.boost/download,
+	  packages/build.boost/Makefile: added
+
 2010-09-15 Borut Razem <borut.razem AT siol.net>
 
 	* packages/build.mingw32/Makefile: updated to gcc 4.5.1, w32api 3.15-1
